<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/rootLayout"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:weightSum="1"
	android:gravity="center_horizontal|center_vertical">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
		android:gravity="center_horizontal">

		<ImageView
			android:layout_width="150dp"
			android:layout_height="130dp"
			android:id="@+id/imageView"
			android:src="@drawable/logo"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/label_start"
			android:id="@+id/textView2"
			android:padding="20dp"/>

	</LinearLayout>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"
		android:paddingLeft="10dp"
		android:paddingRight="10dp">

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:hint="@string/hint_username"
				android:id="@+id/edtLogin"
				android:inputType="textNoSuggestions"
				android:maxLines="1"
				android:singleLine="true"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<EditText
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:hint="@string/hint_password"
				android:id="@+id/edtPassword"
				android:inputType="textPassword"
				android:maxLines="1"
				android:singleLine="true"/>

		</LinearLayout>

		<Button
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/button_sign_in"
			android:id="@+id/btnGetApiKeys"
			android:layout_gravity="center_horizontal"
			android:visibility="visible"/>

		<Button
			android:layout_height="wrap_content"
			android:text="@string/button_offline"
			android:layout_width="match_parent"
			android:id="@+id/btnOffline"
			android:onClick="btnOffline"
			android:visibility="gone"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:weightSum="1"
			android:id="@+id/llStartMenu"
			android:visibility="gone">

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_user_info"
				android:id="@+id/btnUserInfo"
				android:layout_weight="0.15"/>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/button_start_app"
				android:id="@+id/btnStart"
				android:layout_weight="0.85"/>

		</LinearLayout>

		<LinearLayout
			android:id="@+id/layoutPadding"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:padding="50dp"/>

	</LinearLayout>

</LinearLayout>

