<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:id="@+id/ll_3wifi_settings"
		android:baselineAligned="false">

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#A0A0A0"
				android:textSize="14sp"
				android:text="@string/hint_username"
				android:id="@+id/lab_settings_3wifi_login"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/txt_settings_3wifi_login"
				android:inputType="textNoSuggestions"
				android:singleLine="true"
				android:layout_weight="1"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:orientation="vertical"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1">

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginLeft="4dp"
					android:textAppearance="?android:attr/textAppearanceLarge"
					android:textColor="#A0A0A0"
					android:textSize="14sp"
					android:text="@string/hint_password"
					android:id="@+id/lab_settings_3wifi_password"/>

				<EditText
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/txt_settings_3wifi_password"
					android:inputType="textPassword"
					android:singleLine="true"
					android:layout_weight="1"/>

			</LinearLayout>

			<CheckBox
				android:layout_gravity="center_vertical"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="12dp"
				android:text="@string/checkbox_unmask_password"
				android:onClick="cbUnmaskClick"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="4dp"
				android:textAppearance="?android:attr/textAppearanceLarge"
				android:textColor="#A0A0A0"
				android:textSize="14sp"
				android:text="@string/label_server_url"
				android:id="@+id/lab_settings_3wifi_server"/>

			<EditText
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/txt_settings_3wifi_server"
				android:inputType="textNoSuggestions"
				android:singleLine="true"
				android:layout_weight="1"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp">

			<Switch
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/fetch_by_bssid_essid"
				android:id="@+id/sw_fetch_ess"
				android:textSize="21sp"
				android:enabled="true"
				android:checked="false"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:layout_marginBottom="8dp">

			<Switch
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/check_updates"
				android:id="@+id/sw_check_upd"
				android:textSize="21sp"
				android:enabled="true"
				android:checked="true"/>

		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cancel"
				android:id="@+id/btn_settitgs_3wifi_cancel"/>

			<Button
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/save"
				android:id="@+id/btn_settitgs_3wifi_save"
				android:focusable="true"/>

		</LinearLayout>

	</LinearLayout>

</ScrollView>

