<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:weightSum="1">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="4"
		android:gravity="center_horizontal">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:text="@string/button_refresh"
			android:maxLines="1"
			android:id="@+id/btnRefresh"
			android:onClick="btnRefreshOnClick"
			android:layout_weight="1.0"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:text="@string/button_3wifi"
			android:maxLines="1"
			android:enabled="false"
			android:id="@+id/btnCheckFromBase"
			android:layout_gravity="center_horizontal"
			android:layout_weight="1.0"/>

		<Button
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:text="@string/button_gps_sniff"
			android:id="@+id/btnStartGPSLog"
			android:layout_gravity="center_horizontal"
			android:enabled="false"
			android:textSize="12sp"
			android:layout_weight="1.0"/>

		<ImageButton
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:id="@+id/btnSettings"
			android:src="@android:drawable/ic_menu_preferences"
			android:clickable="false"
			android:adjustViewBounds="false"
			android:layout_weight="1.0"/>

	</LinearLayout>

	<ListView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/WiFiList"
		android:padding="0dp"/>

</LinearLayout>

