<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center_horizontal">

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal"
		android:gravity="center_horizontal">

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/source_3wifi"
			android:layout_weight="1.0"
			android:onClick="btnwpsbaseclick"
			android:id="@+id/baseButton"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/source_local_generator"
			android:layout_weight="1.0"
			android:onClick="btnGenerate"
			android:id="@+id/wpsButton1"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/source_local_database"
			android:layout_weight="1.0"
			android:onClick="btnLocalClick"
			android:id="@+id/wpsButton2"/>

		<Button
			android:layout_height="wrap_content"
			android:layout_width="50dp"
			android:text="…"
			android:maxLines="1"
			android:onClick="btnCustomPin"
			tools:ignore="HardcodedText" />

	</LinearLayout>

	<WebView
		android:id="@+id/webView"
		android:layout_width="match_parent"
		android:layout_height="0dp"/>

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="ESSID"
		android:gravity="center_horizontal"
		android:id="@+id/ESSDWpsTextView"
		tools:ignore="HardcodedText" />

	<TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="00:00:00:00:00:00"
		android:gravity="center_horizontal"
		android:id="@+id/BSSDWpsTextView"
		tools:ignore="HardcodedText" />

	<TextView
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:layout_width="wrap_content"
		android:id="@+id/VendorWpsTextView"/>

	<ListView
		android:layout_height="wrap_content"
		android:layout_width="320dp"
		android:id="@+id/WPSlist"/>

</LinearLayout>

